<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>uiabot</name>
    <version>0.3.0</version>
    <description>ROS 2 package for the uiabot.</description>
    <maintainer email="michael.scott@dundermifflin.com">michael</maintainer>
    <license>DunderMifflin</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>odrive_interfaces</depend>
    <depend>robot_state_publisher</depend>
    <depend>urdf</depend>
    <depend>bno055_i2c_ros2</depend>
    <depend>odrive_ros2</depend>
    <depend>rplidar_ros</depend>
    

    <exec_depend>robot_localization</exec_depend>
    

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>